--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by JetBrains PhpStorm 6.0.2 for binding GitHub repository
+redBASE Template for front-end developing Joomla! 3.x templates.
