--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-redBASE Template for front-end developing Joomla! 3.x templates.
+<h1>redBASE blank Template for front-end developing Joomla! 3.x templates.</h1>
+<h3>Still in development, but you can install and use it now!</h3>
+<br />
+<h2>Twitter Bootstrap, LESS, PIE, Modernizr, Normalize.css and Magic.css</h2>
+<p>Just a small base/blank template that you can use as a foundation for a Joomla 3.x template.</p>
