--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-redBASE blank Template for front-end developing Joomla! 3.x templates.
+redBLANK Template for front-end developing Joomla! 3.x templates.
 Still in development, but you can install and use it now!
 
 Twitter Bootstrap, LESS, PIE, Modernizr, Normalize.css and Magic.css
-Just a small base/blank template that you can use as a foundation for a Joomla! 3.x template.
+Just a small blank template that you can use as a foundation for a Joomla! 3.x template.
