--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Hi guys!!!
+
 redBASE blank Template for front-end developing Joomla! 3.x templates.
 Still in development, but you can install and use it now!
 
