--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Still in development, but you can install and use it now!
 
 Twitter Bootstrap, LESS, PIE, Modernizr, Normalize.css and Magic.css
 Just a small blank template that you can use as a foundation for a Joomla! 3.x template.
+
+Just testing to see where this goes.
