--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 redBASE blank Template for front-end developing Joomla! 3.x templates.
 
-redBLANK Template for front-end developing Joomla! 3.x templates.
+redBASE Template for front-end developing Joomla! 3.x templates.
 Still in development, but you can install and use it now!
 
 Twitter Bootstrap, LESS, PIE, Modernizr, Normalize.css and Magic.css
