--- a/README
+++ b/README
@@ -1,7 +1,5 @@
 redBASE blank Template for front-end developing Joomla! 3.x templates.
-
-redBASE Template for front-end developing Joomla! 3.x templates.
 Still in development, but you can install and use it now!
 
-Twitter Bootstrap, LESS, PIE, Modernizr, Normalize.css and Magic.css
+Twitter Bootstrap, LESS and PIE!
 Just a small blank template that you can use as a foundation for a Joomla! 3.x template.
