--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-redBASE blank Template for front-end developing Joomla! 3.x templates.
-Still in development, but you can install and use it now!
+jBase blank Template for developing Joomla! 3.x templates.
 
-Twitter Bootstrap, LESS and PIE!
+Bootstrap 3, LESS and PIE!
 Just a small blank template that you can use as a foundation for a Joomla! 3.x template.
